--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.3.0"
+    "mongoose": "^8.3.0",
+    "sanitize-html": "^2.13.0"
   }
 }
